# math_trainer

./: .gitignore  README.md  f.txt  pyproject.toml  requirements.txt  setup.cfg
math_trainer/: app.py  report_template
math_trainer/core/: __init__.py  session.py  task_generators.py  utilites.py
math_trainer/gui/: __init__.py  defines.py  mainWindows.py  pages.py  uiHelper.py  ui_helpers.py  windows.py
math_trainer/templates/: htmlSkeleton  styles
source/: report.html  report.pyw  student.pyw  taskGenerators.py  tasks.pyw  teacher.pyw  utilites.py
source/core/: defines.py  taskGenerators.py  task_generators.py  tools.py
source/gui/: __init__.py  defines.py  mainWindows.py  pages.py  uiHelper.py
source/learning/: __init__.py  defines.py  taskGenerators.py  tools.py
test/: __init__.py  stubs.py  test_taskGenerators.py  test_utilites.py  test_utilits.py
test/core/: test_utilites.py
test/learning/: test_tools.py
tests/: __init__.py
tests/core/: test_utilites.py
