[tool.poetry]
name = "math-trainer"
version = "0.1.0"
description = "an application for testing the performance of arithmetic tasks by students"
authors = ["evgeniy tulyakov <e.v.tulyakov1998@gmail.com>"]
readme = "README.md"
repository = "https://github.com/evgeniy-tulyakov/math-trainer"
include = [{ path = "tests", format = "sdist" }]


[tool.poetry.dependencies]
python = "^3.9"
wxPython = "^4.1.1"


[tool.poetry.dev-dependencies]
pytest = "^7.1.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
