[tool.poetry]
name = "math-trainer"
version = "0.1.0"
description = "an application for testing the performance of arithmetic tasks by students"
authors = ["evgeniy tulyakov <e.v.tulyakov1998@gmail.com>"]
readme = "README.md"
repository = "https://github.com/evgeniy-tulyakov/math-trainer"
include = [{ path = "tests", format = "sdist" }]


[tool.poetry.dependencies]
python = "^3.9"
wxPython = "^4.1.1"


[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-import-order = "^0.18.1"
flake8-quotes = "^3.3.1"
flake8-variables-names = "^0.0.5"
mypy = "^0.942"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
